--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,6 +1316,13 @@
     "                                       ).otherwise(F.col('trip'))\n",
     "                        ).orderBy(ts_name)\n",
     "    \n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('tripType') != 4) &\n",
+    "                                        (F.col('trip') == 4) &\n",
+    "                                        (F.lead('trip',1).over(Window.orderBy(ts_name)) == 4),\n",
+    "                                        F.col('tripType')\n",
+    "                                       ).otherwise(F.col('trip'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    \n",
     "    df2 = df2.drop(*['segment', 'pause', 'pause_dist', 'tmp']).orderBy(ts_name)\n",
     "    \n",
     "    #df2.select('timestamp','tripType','trip','tripMOT').show(20000,False)\n",
@@ -1354,60 +1361,63 @@
     "                                        F.col('tripType')\n",
     "                                        ).otherwise(F.col('trip'))\n",
     "                         ).orderBy(ts_name)\n",
-    "    \"\"\"\n",
-    "    df3 = df3.withColumn('trip', F.when((F.col('trip') == 1) &\n",
-    "                                        (F.lag('tripType', 1).over(w4) == 3),\n",
-    "                                        F.col('tripType')\n",
-    "                                        ).otherwise(F.col('trip'))\n",
-    "                         ).orderBy(ts_name)\n",
-    "\n",
-    "    df3 = df3.withColumn('trip', F.when(F.col('trip').isNull() &\n",
-    "                                        (F.col('tripType') == 3),\n",
-    "                                        F.col('tripType')\n",
-    "                                        ).otherwise(F.col('trip'))\n",
-    "                         ).orderBy(ts_name)\n",
-    "    \"\"\"\n",
     "    \n",
     "    # trip segmentation\n",
     "    df3 = trip_segmentation(df3, ts_name, speed_segment_length)\n",
-    "    \n",
-    "    df3.select('timestamp','tripType','trip','tripMOT','ch').show(10000,False)\n",
-    "    \n",
-    "    \"\"\"\n",
     "\n",
     "    # remove short trips\n",
     "    df3 = df3.withColumn('cum_dist', F.sum(dist_name).over(w4.rowsBetween(Window.unboundedPreceding, 0))\n",
     "                         ).orderBy(ts_name)\n",
     "\n",
-    "    df3 = df3.withColumn('tmp', F.when((F.col('tripType') == 4) &\n",
+    "    df3 = df3.withColumn('tmp', F.when((F.col('trip') == 4) &\n",
     "                                       ((F.col('cum_dist') < min_trip_length) |\n",
     "                                        (F.col('pause') < min_trip_duration)),\n",
-    "                                       0)\n",
+    "                                       1)\n",
     "                         ).orderBy(ts_name)\n",
     "\n",
     "    df3 = df3.withColumn('tmp', F.when(F.col('tmp').isNull(),\n",
     "                                       F.last('tmp', ignorenulls=True)\n",
-    "                                       .over(w4.rowsBetween(0, Window.unboundedFollowing))\n",
+    "                                        .over(w2.rowsBetween(0, Window.unboundedFollowing))\n",
     "                                       ).otherwise(F.col('tmp'))\n",
     "                         ).orderBy(ts_name)\n",
-    "\n",
-    "    df3 = df3.withColumn('tmp', F.when(F.col('tmp').isNull() &\n",
-    "                                       (F.col('trip') == 4) &\n",
-    "                                       ((F.col('cum_dist') < min_trip_length) |\n",
-    "                                        (F.col('pause') < min_trip_duration)),\n",
-    "                                       1).otherwise(F.col('tmp'))\n",
+    "    \n",
+    "    df3 = df3.withColumn('tmp2', F.when((F.col('tmp') == 1) &\n",
+    "                                        (F.col('tripType') == 1),\n",
+    "                                        0)\n",
+    "                         ).orderBy(ts_name)\n",
+    "    \n",
+    "    df3 = df3.withColumn('tmp2', F.when(F.col('tmp2').isNull(),\n",
+    "                                        F.last('tmp2', ignorenulls=True)\n",
+    "                                         .over(w2.rowsBetween(Window.unboundedPreceding,0))\n",
+    "                                        ).otherwise(F.col('tmp2'))\n",
+    "                         ).orderBy(ts_name)\n",
+    "    \n",
+    "    df3 = df3.withColumn('tmp3', F.when((F.col('tmp') == 1) &\n",
+    "                                        F.col('tmp2').isNotNull() &\n",
+    "                                        (F.col('tripType') == 4),\n",
+    "                                        0)\n",
+    "                         ).orderBy(ts_name)\n",
+    "    \n",
+    "    df3 = df3.withColumn('tmp3', F.when(F.col('tmp3').isNull() &\n",
+    "                                        F.col('tmp2').isNotNull(),\n",
+    "                                        F.last('tmp3', ignorenulls=True)\n",
+    "                                         .over(w2.rowsBetween(0, Window.unboundedFollowing))\n",
+    "                                        ).otherwise(F.col('tmp3'))\n",
     "                         ).orderBy(ts_name)\n",
     "\n",
-    "    df3 = df3.withColumn('tmp', F.when(F.col('tmp').isNull(),\n",
-    "                                       F.last('tmp', ignorenulls=True)\n",
-    "                                       .over(w2.rowsBetween(0, Window.unboundedFollowing))\n",
-    "                                       ).otherwise(F.col('tmp'))\n",
-    "                         ).orderBy(ts_name)\n",
-    "\n",
+    "    df3 = df3.withColumn('tmp', F.when(F.col('tmp2').isNotNull() &\n",
+    "                                       F.col('tmp3').isNotNull(),\n",
+    "                                       0).otherwise(F.col('tmp'))\n",
+    "                        ).drop(*['tmp2','tmp3']).orderBy(ts_name)\n",
+    "    \n",
+    "    #df3.select('timestamp','tripType','trip','tripMOT','tmp','ch').show(10000,False)\n",
+    "    \n",
     "    ## reset short isolated trips\n",
     "    df3 = df3.withColumn('trip', F.when(F.col('tmp') == 0, 0).otherwise(F.col('trip')))\n",
     "    df3 = df3.withColumn('tripMOT', F.when(F.col('tmp') == 0, 0).otherwise(F.col('tripMOT')))\n",
+    "    df3 = df3.withColumn('tmp', F.when(F.col('tmp') == 0, None).otherwise(F.col('tmp')))\n",
     "\n",
+    "    \n",
     "    df3 = df3.withColumn('tmp2', F.when((F.col('tmp') == 1) &\n",
     "                                        (F.col('tripType') == 1),\n",
     "                                        2)\n",
@@ -1422,7 +1432,7 @@
     "    df3 = df3.withColumn('tripMOT', F.when(F.col('tmp2') == 2, 0).otherwise(F.col('tripMOT')))\n",
     "    df3 = df3.withColumn('tmp', F.when(F.col('tmp2') == 2, None).otherwise(F.col('tmp')))\n",
     "    df3 = df3.drop('tmp2')\n",
-    "\n",
+    "    \n",
     "    ## merge short trip segments\n",
     "    df3 = df3.withColumn('tripMOT', F.when(F.col('tmp') == 1, None).otherwise(F.col('tripMOT')))\n",
     "\n",
@@ -1451,7 +1461,8 @@
     "                                        F.col('tripType')\n",
     "                                        ).otherwise(F.col('trip'))\n",
     "                         )\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    ## merge adjacent segments\n",
     "    df3 = df3.withColumn('trip', F.when((F.col('trip') == 4) &\n",
     "                                        (F.lead('trip', 1).over(w4) == 1) &\n",
@@ -1467,24 +1478,18 @@
     "                                        ).otherwise(F.col('trip'))\n",
     "                         ).orderBy(ts_name)\n",
     "    \n",
-    "    df3 = df3.withColumn('trip', F.when((F.col('trip') == 1) &\n",
-    "                                        (F.lag('tripType', 1).over(w4) == 3),\n",
-    "                                        F.col('tripType')\n",
-    "                                        ).otherwise(F.col('trip'))\n",
-    "                         ).orderBy(ts_name)\n",
-    "\n",
-    "    df3 = df3.withColumn('trip', F.when(F.col('trip').isNull() &\n",
-    "                                        (F.col('tripType') == 3),\n",
-    "                                        F.col('tripType')\n",
-    "                                        ).otherwise(F.col('trip'))\n",
-    "                         ).orderBy(ts_name)\n",
+    "    # df3.select('timestamp','tripType','trip','tripMOT','ch').show(10000,False)\n",
     "    \n",
     "    # trip segmentation\n",
     "    df3 = trip_segmentation(df3, ts_name, speed_segment_length)\n",
     "    df3 = df3.drop('ch').orderBy(ts_name).cache()\n",
-    "\n",
+    "    \n",
+    "    #df3.select('timestamp','tripType','trip','tripMOT').show(10000,False)\n",
+    "    \n",
     "    df2 = df2.join(df3, [ts_name, 'lat', 'lon', 'duration', 'distance', 'cum_pause',\n",
     "                         'tripType'], how='left').orderBy(ts_name)\n",
+    "    \n",
+    "    df2.select('timestamp','tripType','trip','tripMOT').show(20000,False)\n",
     "    \n",
     "    df2 = df2.withColumn('tripMOT', F.when((F.col('tripType') == 3) &\n",
     "                                           (F.col('trip') != 4), \n",
@@ -1511,6 +1516,7 @@
     "    \n",
     "    \n",
     "    \n",
+    "    \"\"\"\n",
     "    # compute trip number\n",
     "    df2 = df2.withColumn('tripNumber', F.when(F.col('trip') == 1, F.monotonically_increasing_id()))\n",
     "    df2 = df2.withColumn('tripNumber', F.when(F.col('tripNumber').isNull() &\n",
@@ -1575,48 +1581,6 @@
     "gps_data3.count()\n",
     "elapsed_time = time.time() - start_time\n",
     "print(\"      time elapsed: {}\".format(time.strftime(\"%H:%M:%S\", time.gmtime(elapsed_time))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "|2016-08-17 08:27:20|2       |2   |1      |4  |\n",
-    "|2016-08-17 08:27:25|2       |2   |1      |4  |\n",
-    "|2016-08-17 08:27:30|3       |4   |1      |4  |\n",
-    "|2016-08-17 08:29:35|2       |2   |2      |4  |\n",
-    "|2016-08-17 08:29:40|2       |2   |2      |4  |\n",
-    "|2016-08-17 08:29:45|2       |2   |2      |4  |\n",
-    "\n",
-    "|2016-08-17 09:43:55|2       |2   |2      |8  |\n",
-    "|2016-08-17 09:44:00|2       |4   |2      |8  |*\n",
-    "|2016-08-17 09:44:05|3       |4   |2      |8  |\n",
-    "        \n",
-    "|2016-08-17 10:24:25|2       |2   |1      |12 |\n",
-    "|2016-08-17 10:24:30|3       |4   |1      |12 |\n",
-    "|2016-08-17 10:26:55|2       |2   |0      |12 |\n",
-    "|2016-08-17 10:27:00|2       |1   |1      |12 |\n",
-    "|2016-08-17 10:27:05|2       |2   |1      |12 |\n",
-    "        \n",
-    "|2016-08-17 15:34:50|2       |2   |1      |25 |\n",
-    "|2016-08-17 15:34:55|2       |2   |1      |25 |\n",
-    "|2016-08-17 15:35:00|2       |2   |1      |25 |\n",
-    "|2016-08-17 15:45:15|1       |1   |1      |26 |*\n",
-    "|2016-08-17 15:45:20|2       |2   |1      |26 |\n",
-    "|2016-08-17 15:45:25|2       |2   |1      |26 |\n",
-    "|2016-08-17 15:45:30|2       |2   |1      |26 |\n",
-    "        \n",
-    "|2016-08-17 16:22:25|2       |2   |1      |28 |\n",
-    "|2016-08-17 16:22:30|2       |2   |1      |28 |\n",
-    "|2016-08-17 16:22:35|3       |4   |1      |28 |\n",
-    "|2016-08-17 16:24:30|2       |2   |0      |28 |\n",
-    "|2016-08-17 16:24:35|2       |1   |1      |28 |*\n",
-    "|2016-08-17 16:24:40|4       |4   |1      |28 |\n",
-    "|2016-08-17 16:28:45|1       |1   |1      |29 |\n",
-    "|2016-08-17 16:28:50|2       |2   |1      |29 |\n",
-    "|2016-08-17 16:28:55|2       |2   |1      |29 |"
    ]
   },
   {
