--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('spark.sql.shuffle.partitions', '20'),\n",
+       " ('spark.cleaner.referenceTracking.cleanCheckpoints', 'True'),\n",
+       " ('spark.driver.host', '10.94.93.54'),\n",
+       " ('spark.executor.id', 'driver'),\n",
+       " ('spark.driver.memory', '16g'),\n",
+       " ('spark.app.id', 'local-1557489825910'),\n",
+       " ('spark.app.name', 'GPS+ACC'),\n",
+       " ('spark.driver.port', '53067'),\n",
+       " ('spark.executor.memory', '16g'),\n",
+       " ('spark.rdd.compress', 'True'),\n",
+       " ('spark.memory.fraction', '0.6'),\n",
+       " ('spark.serializer.objectStreamReset', '100'),\n",
+       " ('spark.master', 'local[*]'),\n",
+       " ('spark.submit.deployMode', 'client'),\n",
+       " ('spark.memory.offHeap.enabled', 'True'),\n",
+       " ('spark.ui.showConsoleProgress', 'true'),\n",
+       " ('spark.memory.offHeap.size', '16g')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# REFERENCE: https://spark.apache.org/docs/latest/configuration.html\n",
     "\n",
@@ -65,27 +92,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc.defaultParallelism"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc.defaultMinPartitions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://10.94.93.54:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v2.4.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>GPS+ACC</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=local[*] appName=GPS+ACC>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc"
    ]
@@ -423,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,9 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[timestamp: timestamp, dow: string, lat: double, lon: double, distance: double, height: double, speed: double]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "date_format = 'yyyy/MM/dd'\n",
     "time_format = 'HH:mm:ss'\n",
@@ -620,9 +709,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> align timestamps...\n",
+      "      time elapsed: 00:00:05\n"
+     ]
+    }
+   ],
    "source": [
     "# Round seconds in timestamps according to the interval\n",
     "\n",
@@ -640,9 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> set fix type...\n",
+      "      time elapsed: 00:00:02\n"
+     ]
+    }
+   ],
    "source": [
     "# Set fix type\n",
     "\n",
@@ -671,9 +778,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> apply velocity filter...\n",
+      "      time elapsed: 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply filter on the velocity\n",
     "\n",
@@ -689,9 +805,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> apply accelaration filter...\n",
+      "      time elapsed: 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply filter over max acceleration\n",
     "                                             \n",
@@ -708,9 +833,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> apply height variation filter...\n",
+      "      time elapsed: 00:00:01\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply filter on the height variation\n",
     "\n",
@@ -725,18 +859,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115122"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gps_data.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> apply three fixes filter...\n",
+      "      time elapsed: 00:00:03\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply filter over three fixes (it also recalculates distance column)\n",
     "\n",
@@ -754,9 +908,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115045"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gps_data.count()"
    ]
@@ -822,18 +987,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps_data = gps_data.limit(20000)"
+    "gps_data = gps_data.limit(100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- dow: string (nullable = true)\n",
+      " |-- lat: double (nullable = true)\n",
+      " |-- lon: double (nullable = true)\n",
+      " |-- distance: string (nullable = true)\n",
+      " |-- height: double (nullable = true)\n",
+      " |-- speed: double (nullable = true)\n",
+      " |-- fixTypeCode: integer (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gps_data.printSchema()"
    ]
@@ -842,7 +1024,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> detect trips...\n"
+     ]
+    }
+   ],
    "source": [
     "##%%time\n",
     "\n",
