--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,9 +1668,14 @@
     "                                      F.col('t1').isNull(),\n",
     "                                      F.last('t1', ignorenulls=True)\n",
     "                                       .over(Window.orderBy(ts_name)\n",
-    "                                                   .rowsBetween(Window.unboundedPreceding, Window.unboundedFollowing))\n",
+    "                                                   .rowsBetween(0, Window.unboundedFollowing))\n",
     "                                      ).otherwise(F.col('t1'))\n",
     "                         ).orderBy(ts_name)\n",
+    "    try:\n",
+    "        df2.coalesce(1).write.option(\"header\",True).option(\"inferSchema\",\"true\")\\\n",
+    "                       .option(\"timestampFormat\", \"yyyy-MM-dd HH:mm:ss\").csv(\"tmp.csv\")\n",
+    "    except:\n",
+    "        pass\n",
     "    df2 = df2.withColumn('t1', F.when((F.col('tripType') == 3) &\n",
     "                                      (F.col('t1') == 0) &\n",
     "                                      (F.lead('t1',1).over(Window.orderBy(ts_name)) == 1),\n",
@@ -1681,11 +1686,7 @@
     "                                      (F.lag('t1', 1).over(Window.orderBy(ts_name)) == 1),\n",
     "                                      1).otherwise(F.col('t1'))\n",
     "                         ).orderBy(ts_name)\n",
-    "    #try:\n",
-    "    #    df2.coalesce(1).write.option(\"header\",True).option(\"inferSchema\",\"true\")\\\n",
-    "    #                   .option(\"timestampFormat\", \"yyyy-MM-dd HH:mm:ss\").csv(\"tmp.csv\")\n",
-    "    #except:\n",
-    "    #    pass\n",
+    "    \n",
     "    df2 = df2.withColumn('tripNumber', F.when((F.col('t1') == 1) &\n",
     "                                              (F.col('tripType') == 3),\n",
     "                                              0).otherwise(F.col('tripNumber'))\n",
