--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -45,12 +45,11 @@
       "text/plain": [
        "[('spark.sql.shuffle.partitions', '20'),\n",
        " ('spark.cleaner.referenceTracking.cleanCheckpoints', 'True'),\n",
-       " ('spark.driver.host', '10.94.93.54'),\n",
+       " ('spark.app.id', 'local-1557567755034'),\n",
        " ('spark.executor.id', 'driver'),\n",
        " ('spark.driver.memory', '16g'),\n",
-       " ('spark.app.id', 'local-1557489825910'),\n",
+       " ('spark.driver.host', '10.0.1.4'),\n",
        " ('spark.app.name', 'GPS+ACC'),\n",
-       " ('spark.driver.port', '53067'),\n",
        " ('spark.executor.memory', '16g'),\n",
        " ('spark.rdd.compress', 'True'),\n",
        " ('spark.memory.fraction', '0.6'),\n",
@@ -58,6 +57,7 @@
        " ('spark.master', 'local[*]'),\n",
        " ('spark.submit.deployMode', 'client'),\n",
        " ('spark.memory.offHeap.enabled', 'True'),\n",
+       " ('spark.driver.port', '64746'),\n",
        " ('spark.ui.showConsoleProgress', 'true'),\n",
        " ('spark.memory.offHeap.size', '16g')]"
       ]
@@ -142,7 +142,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.94.93.54:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://10.0.1.4:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -717,7 +717,7 @@
      "output_type": "stream",
      "text": [
       "====> align timestamps...\n",
-      "      time elapsed: 00:00:05\n"
+      "      time elapsed: 00:00:04\n"
      ]
     }
    ],
@@ -908,20 +908,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "115045"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gps_data.count()"
    ]
@@ -987,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1022,15 +1011,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "====> detect trips...\n",
-      "      time elapsed: 04:34:50\n"
+      "====> detect trips...\n"
      ]
     }
    ],
@@ -1110,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1148,7 @@
     "    udf_round = F.udf(lambda x: floor(x + 0.5))  # floor(x+0.5) == Math.round(x) in JavaScript\n",
     "\n",
     "    app_fun = F.udf(lambda x: trip_mode_type(x, vehicle_speed_cutoff, bicycle_speed_cutoff, walk_speed_cutoff))\n",
-    "    \"\"\"\n",
+    "    \n",
     "    df2 = df.withColumn('tripMOT', F.lit(0))\n",
     "\n",
     "    df2 = df2.withColumn('trip', F.when(F.col('tripType') == 1,\n",
@@ -1515,7 +1503,7 @@
     "    df2.coalesce(1).write.option(\"header\",True).option(\"inferSchema\",\"true\")\\\n",
     "                   .option(\"timestampFormat\", \"yyyy-MM-dd HH:mm:ss\").csv(\"partial_5a.csv\")\n",
     "                   \n",
-    "    \"\"\"\n",
+    "    \"\"\"\"\"\"\n",
     "                   \n",
     "    gps_data_path = '/Users/molinaro/Documents/GITHUB/HABITUS/partial_5a.csv/part-00000-45ace25c-64b4-4cb9-837e-b53ff0310a82-c000.csv'\n",
     "    df2 = spark.read.csv(gps_data_path, header=True, inferSchema=True)\n",
@@ -1807,15 +1795,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "====> classify trips...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%%time\n",
     "\n",
