--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -45,19 +45,19 @@
       "text/plain": [
        "[('spark.sql.shuffle.partitions', '20'),\n",
        " ('spark.cleaner.referenceTracking.cleanCheckpoints', 'True'),\n",
-       " ('spark.app.id', 'local-1557567755034'),\n",
        " ('spark.executor.id', 'driver'),\n",
        " ('spark.driver.memory', '16g'),\n",
        " ('spark.driver.host', '10.0.1.4'),\n",
        " ('spark.app.name', 'GPS+ACC'),\n",
        " ('spark.executor.memory', '16g'),\n",
+       " ('spark.driver.port', '50227'),\n",
        " ('spark.rdd.compress', 'True'),\n",
        " ('spark.memory.fraction', '0.6'),\n",
        " ('spark.serializer.objectStreamReset', '100'),\n",
        " ('spark.master', 'local[*]'),\n",
        " ('spark.submit.deployMode', 'client'),\n",
        " ('spark.memory.offHeap.enabled', 'True'),\n",
-       " ('spark.driver.port', '64746'),\n",
+       " ('spark.app.id', 'local-1557635920402'),\n",
        " ('spark.ui.showConsoleProgress', 'true'),\n",
        " ('spark.memory.offHeap.size', '16g')]"
       ]
@@ -571,9 +571,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---+---------+-----------+--------+------+-----+\n",
+      "|timestamp          |dow|lat      |lon        |distance|height|speed|\n",
+      "+-------------------+---+---------+-----------+--------+------+-----+\n",
+      "|2016-08-16 18:23:29|2  |51.01609 |-114.099305|0.0     |0.0   |0.121|\n",
+      "|2016-08-16 18:23:34|2  |51.016075|-114.09925 |0.0     |1084.0|2.127|\n",
+      "|2016-08-16 18:23:39|2  |51.016078|-114.099263|0.0     |1076.0|0.312|\n",
+      "|2016-08-16 18:23:44|2  |51.016072|-114.09925 |0.0     |1077.0|0.544|\n",
+      "|2016-08-16 18:23:49|2  |51.016083|-114.099242|0.0     |1077.0|0.061|\n",
+      "|2016-08-16 18:23:54|2  |51.016085|-114.09924 |0.0     |1078.0|0.538|\n",
+      "|2016-08-16 18:23:59|2  |51.016088|-114.099247|0.0     |1077.0|0.515|\n",
+      "|2016-08-16 18:24:04|2  |51.016088|-114.099247|0.0     |1077.0|0.174|\n",
+      "|2016-08-16 18:24:09|2  |51.016092|-114.099217|0.0     |1076.0|4.102|\n",
+      "|2016-08-16 18:24:14|2  |51.016152|-114.099205|0.0     |1077.0|5.964|\n",
+      "|2016-08-16 18:24:19|2  |51.016205|-114.099188|0.0     |1077.0|4.868|\n",
+      "|2016-08-16 18:24:24|2  |51.016223|-114.099218|0.0     |1076.0|2.337|\n",
+      "|2016-08-16 18:24:29|2  |51.016218|-114.099243|0.0     |1078.0|0.71 |\n",
+      "|2016-08-16 18:24:34|2  |51.016218|-114.099233|0.0     |1078.0|0.646|\n",
+      "|2016-08-16 18:24:39|2  |51.016218|-114.099218|0.0     |1078.0|0.165|\n",
+      "|2016-08-16 18:24:44|2  |51.016217|-114.099218|0.0     |1078.0|0.377|\n",
+      "|2016-08-16 18:24:49|2  |51.016217|-114.099217|0.0     |1078.0|0.041|\n",
+      "|2016-08-16 18:24:54|2  |51.016215|-114.099215|0.0     |1078.0|0.255|\n",
+      "|2016-08-16 18:24:59|2  |51.016217|-114.099222|0.0     |1078.0|0.561|\n",
+      "|2016-08-16 18:25:04|2  |51.016225|-114.099238|0.0     |1078.0|2.248|\n",
+      "+-------------------+---+---------+-----------+--------+------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gps_data.show(20,False)"
    ]
@@ -709,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +750,7 @@
      "output_type": "stream",
      "text": [
       "====> align timestamps...\n",
-      "      time elapsed: 00:00:04\n"
+      "      time elapsed: 00:00:00\n"
      ]
     }
    ],
@@ -738,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +901,7 @@
        "115122"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -908,9 +941,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115045"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gps_data.count()"
    ]
@@ -985,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1148,19 @@
    "source": [
     "#df.write.csv('partial.csv')\n",
     "#gps_data.coalesce(1).write.format('com.databricks.spark.csv').save('partial.csv',header = 'true')\n",
-    "gps_data.coalesce(1).write.option(\"header\",True).option(\"inferSchema\",\"true\").option(\"timestampFormat\", \"yyyy-MM-dd HH:mm:ss\").csv(\"mydata.csv\")"
+    "gps_data2.coalesce(1).write.option(\"header\",True).option(\"inferSchema\",\"true\").option(\"timestampFormat\", \"yyyy-MM-dd HH:mm:ss\").csv(\"mydata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gps_data_path = '/Users/molinaro/Documents/GITHUB/HABITUS/partial_5a.csv/part-00000-80943cd6-b7d3-427f-84b1-7988cb76cb55-c000.csv'\n",
+    "gps_data2 = spark.read.csv(gps_data_path, header=True, inferSchema=True)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -1144,7 +1200,7 @@
     "    w1 = Window.orderBy(ts_name).rowsBetween(Window.unboundedPreceding, 0)\n",
     "    w2 = Window.partitionBy('segment').orderBy(ts_name)\n",
     "    w3 = Window.partitionBy('tripMOT').orderBy(ts_name)\n",
-    "\n",
+    "    \n",
     "    udf_round = F.udf(lambda x: floor(x + 0.5))  # floor(x+0.5) == Math.round(x) in JavaScript\n",
     "\n",
     "    app_fun = F.udf(lambda x: trip_mode_type(x, vehicle_speed_cutoff, bicycle_speed_cutoff, walk_speed_cutoff))\n",
@@ -1505,8 +1561,8 @@
     "                   \n",
     "    \"\"\"\"\"\"\n",
     "                   \n",
-    "    gps_data_path = '/Users/molinaro/Documents/GITHUB/HABITUS/partial_5a.csv/part-00000-45ace25c-64b4-4cb9-837e-b53ff0310a82-c000.csv'\n",
-    "    df2 = spark.read.csv(gps_data_path, header=True, inferSchema=True)\n",
+    "    #gps_data_path = '/Users/molinaro/Documents/GITHUB/HABITUS/partial_5a.csv/part-00000-80943cd6-b7d3-427f-84b1-7988cb76cb55-c000.csv'\n",
+    "    #df2 = spark.read.csv(gps_data_path, header=True, inferSchema=True)\n",
     "     \n",
     "    # sanity checks\n",
     "\n",
@@ -1656,7 +1712,7 @@
     "                                      F.col('t1').isNull(),\n",
     "                                      F.last('t1', ignorenulls=True)\n",
     "                                       .over(Window.orderBy(ts_name)\n",
-    "                                                   .rowsBetween(0, Window.unboundedFollowing))\n",
+    "                                                   .rowsBetween(Window.unboundedPreceding,0))\n",
     "                                      ).otherwise(F.col('t1'))\n",
     "                         ).orderBy(ts_name)\n",
     "    try:\n",
@@ -1713,7 +1769,7 @@
     "                                      F.col('t2').isNull(),\n",
     "                                      F.last('t2', ignorenulls=True)\n",
     "                                      .over(Window.orderBy(ts_name)\n",
-    "                                                  .rowsBetween(Window.unboundedPreceding, Window.unboundedFollowing))\n",
+    "                                                  .rowsBetween(0, Window.unboundedPreceding))\n",
     "                                      ).otherwise(F.col('t2'))\n",
     "                         ).orderBy(ts_name)\n",
     "    df2 = df2.withColumn('t2', F.when((F.col('tripType') == 3) &\n",
@@ -1765,7 +1821,7 @@
     "                                      F.col('t1').isNull(),\n",
     "                                      F.last('t1', ignorenulls=True)\n",
     "                                      .over(Window.orderBy(F.col('t1'))\n",
-    "                                                  .rowsBetween(Window.unboundedPreceding, Window.unboundedFollowing))\n",
+    "                                                  .rowsBetween(0, Window.unboundedPreceding))\n",
     "                                      ).otherwise(F.col('t1'))\n",
     "                         ).orderBy(ts_name)\n",
     "    df2 = df2.withColumn('tripNumber', F.when((F.col('t1') == 1) &\n",
