--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,11 +2,19 @@ CHANGELOG FILE
 ===============
 
 
+2019-05-12 Emiliano Molinaro <emil.molinaro@gmail.com>
+
+    * Version 1.7
+
+    * tools.py: added the possibility to set default_partitions
+
+    * GPSProcessing.py (classify_trips): added sanity checks
+
 2019-05-07 Emiliano Molinaro <emil.molinaro@gmail.com>
 
 	* Version 1.5
 	
-	* GPSProcessing.py (trip_segmentation): improvements to match PALMS trip segmatation algorithm.
+	* GPSProcessing.py (trip_segmentation): improvements to match PALMS trip segmentation algorithm.
 
 	* GPSProcessing.py (set_distance_and_speed): recalculate the distance and velocity at each valid fix. Filter out fixes where velocity is null because of repeated timestamp.
 
