--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,16 @@ CHANGELOG FILE
 
 2019-05-14 Emiliano Molinaro <emil.molinaro@gmail.com>
 
+    * Version 1.9
+
+    * tools.py: added option for default number of cores
+
+    * habitus.py: added option for default number of cores
+
+    * help_menu.py: added option for default number of cores
+
+2019-05-13 Emiliano Molinaro <emil.molinaro@gmail.com>
+
     * Version 1.8
 
     * habitus.py: set 'spark.ui.showConsoleProgress' to 'false' to remove stages from the console
